+ Scoreboards are now stored in scoreboards.yml and previous scoreboards are automatically converted into the new scoreboard structure. + /rsb setsb <name> <target> to define a new scoreboard to be set.